reports/03-classification.log
Traceback (most recent call last):
  File "/Users/jankirenz/opt/anaconda3/envs/qe-mini-example/lib/python3.8/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/Users/jankirenz/opt/anaconda3/envs/qe-mini-example/lib/python3.8/site-packages/nbclient/client.py", line 1117, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/jankirenz/opt/anaconda3/envs/qe-mini-example/lib/python3.8/site-packages/nbclient/util.py", line 78, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/jankirenz/opt/anaconda3/envs/qe-mini-example/lib/python3.8/site-packages/nbclient/util.py", line 57, in just_run
    return loop.run_until_complete(coro)
  File "/Users/jankirenz/opt/anaconda3/envs/qe-mini-example/lib/python3.8/asyncio/base_events.py", line 616, in run_until_complete
    return future.result()
  File "/Users/jankirenz/opt/anaconda3/envs/qe-mini-example/lib/python3.8/site-packages/nbclient/client.py", line 558, in async_execute
    await self.async_execute_cell(
  File "/Users/jankirenz/opt/anaconda3/envs/qe-mini-example/lib/python3.8/site-packages/nbclient/client.py", line 862, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/Users/jankirenz/opt/anaconda3/envs/qe-mini-example/lib/python3.8/site-packages/nbclient/client.py", line 765, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
knitr::opts_chunk$set(warning = FALSE, message = FALSE)
library(tidyverse)
library(skimr)
library(GGally)
library(ggmap)
library(tidymodels)
library(visdat)
library(corrr)
library(ggsignif)
library(gt)
library(vip)


theme_set(theme_classic())
------------------

[0;36m  File [0;32m"/var/folders/35/43bdsj9j64j16410rds5g9vr0000gp/T/ipykernel_22807/2014580695.py"[0;36m, line [0;32m1[0m
[0;31m    knitr::opts_chunk$set(warning = FALSE, message = FALSE)[0m
[0m          ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (2014580695.py, line 1)

